# CIS194-Solutions

./: .gitignore  CIS194.cabal  LICENSE  README.md
.stack-work/install/x86_64-linux/lts-8.5/8.0.2/flag-cache/: mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6
src/: Main.hs
src/Homework1/: Solution.hs
src/Homework10/: AParser.hs
src/Homework11/: SExpr.hs
src/Homework12/: Risk.hs
src/Homework2/: Log.hs  LogAnalysis.hs
src/Homework3/: Golf.hs
src/Homework4/: Solution.hs
src/Homework5/: Calc.hs
src/Homework6/: Fibonacci.hs
src/Homework7/: Editor.hs  JoinList.hs  Scrabble.hs  Sized.hs  StringBufEditor.hs  StringBuffer.hs  Tree.hs
src/Homework8/: Employee.hs  Party.hs
test/: Spec.hs
