name:                CIS194
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gabluc/CIS194-Solutions#readme
license:             BSD3
license-file:        LICENSE
author:              gabluc
maintainer:          gabluc@protonmail.com
copyright:           2017 gabluc
category:            Course solutions
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable CIS194
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       mtl
